# ros-ups-manager

./: Dockerfile  README.md  docker-compose.yml  move.sh
arduino/src/: phealth.c
src/capc/: CMakeLists.txt  package.xml  setup.py
src/capc/launch/: main.launch
src/capc/scripts/: listener.py  talker.py  watchdog.py
src/capc/scripts/common/: color.py
src/capc/scripts/serials/: cabinet.py  ups.py
